attempt to fix poster stretching on mobile v2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,7 @@ a #mealText{
 
 #post-poster{
 	width: 60%;
+	align-self: center;
 }
 
 #post-dataBar{
